--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   </parent>
   <groupId>io.meeds.gamification-crowdin</groupId>
   <artifactId>gamification-crowdin-parent</artifactId>
-  <version>1.0.x-SNAPSHOT</version>
+  <version>1.0.x-connector-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Meeds - Gamification Crowdin - Parent POM</name>
   <description>Meeds Add-on for Crowdin gamification add-on connector</description>
@@ -47,9 +47,9 @@
     <tag>HEAD</tag>
   </scm>
   <properties>
-    <org.exoplatform.social.version>6.6.x-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.platform-ui.version>6.6.x-SNAPSHOT</org.exoplatform.platform-ui.version>
-    <addon.exo.gamification.version>2.6.x-SNAPSHOT</addon.exo.gamification.version>
+    <org.exoplatform.social.version>6.6.x-meed-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.platform-ui.version>6.6.x-meed-SNAPSHOT</org.exoplatform.platform-ui.version>
+    <addon.exo.gamification.version>2.6.x-meed-SNAPSHOT</addon.exo.gamification.version>
 
     <!-- Sonar properties -->
     <sonar.organization>meeds-io</sonar.organization>
